fix title index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Быстрые новости</title>
+  <title>Шоковые Новости</title>
   <link rel="stylesheet" href="site/css/style.css">
   </head>
   <body>
