--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Шоковые Новости</title>
   <link rel="stylesheet" href="site/css/style.css">
+  <meta charset="utf-8">
   </head>
   <body>
     <header>
