--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Шоковые Новости</title>
   <link rel="stylesheet" href="site/css/style.css">
-  <meta charset="utf-8">
+  <meta charset="utf-8" lang="ru">
   </head>
   <body>
     <header>
@@ -19,7 +19,7 @@
                 Опубликовал <a href="#">Джон Фэритэйлов</a>
                 21 октября 2022
             </div>
-            <img src="site/images/news1.jpg">
+            <img src="site/images/news1.jpg" alt="Его звали Ортон...">
             <p>Джордж Адамски утверждал, что установил контакт с инопланетянами. Это первое происшествие произошло 20 ноября 1952 года. Адамски и его спутники находились в пустыне Колорадо, недалеко от поселка Desert Center...</p>
             </article>
 
@@ -31,7 +31,7 @@
                     Опубликовал <a href="#">Софья Селиверстова</a>
                     21 октября 2022
                 </div>
-                <img src="site/images/news2.jpg">
+                <img src="site/images/news2.jpg" alt="Изобретена таблетка от страшного заболевания">
                 <p>Компания Merck недавно выпустила пресс-релиз о результатах 3-й фазы - рандомизированного исследования, в котором речь идёт о том, что молнупиравир был настолько эффективен у пациентов с COVID-19 в условиях амбулаторного лечения, что они досрочно прекратили исследование (т.к. продолжать давать пациентам плацебо было неэтично). </p>
                 </article>
 
@@ -43,7 +43,7 @@
                     Опубликовал <a href="#">Сергей Заголовков</a>
                     20 октября 2022
                 </div>
-                <img src="site/images/news3.jpg">
+                <img src="site/images/news3.jpg" alt="Произошел взрыв">
                 <p>Взрыв COVID-19 в Ивановской области бьет все новые рекорды. За сутки ковидные тесты показали положительный результат у 365 жителей региона (вчера - 334). Это на 31 больше, чем 24 часа назад. В общей сложности 73 725 жителей региона подхватили коронавирус с начала пандемии. </p>
                 </article>
 
@@ -55,7 +55,7 @@
                         Опубликовал <a href="#">Иван Селиверстов</a>
                         19 октября 2022
                     </div>
-                    <img src="site/images/news4.jpg">
+                    <img src="site/images/news4.jpg" alt="Полицейские Германии">
                     <p>Департамент полиции города немецкого Саарбрюккена отчитался о завершении крупнейшего дела, связанного с хищениями государственных средств. Немецкие блюстители закона подвели под скамью подсудимых 12 граждан бывшего СССР, получавших федеральные деньги </p>
                     </article>
 
@@ -67,7 +67,7 @@
                             Опубликовал <a href="#">Иван Селиверстов</a>
                             19 октября 2022
                         </div>
-                        <img src="site/images/news5.jpg">
+                        <img src="site/images/news5.jpg" alt="еньги выдадут всем Россиянам">
                         <p>Единовременное пособие при рождении ребенка увеличится до 23 011 рублей. Максимальная сумма выплаты по беременности и родам в декретном отпуске в 140 дней составит 383 179 рублей, а максимальный размер выплат по больничным листам – 83 204 рубля ежемесячно.</p>
                         </article>
 
