--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
   <title>Шоковые Новости</title>
   <link rel="stylesheet" href="site/css/style.css">
-  <meta charset="utf-8" lang="ru">
+  <meta charset="utf-8">
   </head>
   <body>
     <header>
